--- a/modules/server/src/main/resources/vm/login.vm
+++ b/modules/server/src/main/resources/vm/login.vm
@@ -4,6 +4,8 @@
 <head>
     #parse("common/head.vm")
     <title>Jpom-项目管理系统</title>
+    <meta name="keywords" content="Jpom,Java项目管理,Jar管理,Java管理系统,服务器项目运维"/>
+    <meta name="description" content="Jpom-项目管理系统"/>
     <style>
         .auto {
             width: 100%;
