--- a/modules/server/src/main/resources/vm/node/index.vm
+++ b/modules/server/src/main/resources/vm/node/index.vm
@@ -97,6 +97,11 @@
                                data-options="{'id':'alioss', 'title':'阿里云OSS', 'url':'./system/alioss'}">阿里云OSS</a>
                         </li>
                     #end
+
+                    <li class="layui-nav-item">
+                        <a href="javascript:;"
+                           data-options="{'id':'tomcatManage', 'title':'Tomcat管理', 'url':'./tomcat/tomcatManage'}">Tomcat管理</a>
+                    </li>
                 </ul>
             </div>
         </div>
